[tool.poetry]
name = "music-feature-extractor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "<2.0.0"
music21 = "^7.1.0"
pandas = "^1.4.0"
autopep8 = "^1.6.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
