[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "music21>=7.3.3",
    "matplotlib>=3.5.2",
]
requires-python = ">=3.10"
license = {text = ""}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
